test/compile-fail/resolution/use/use-item-in-fn/top.rhdl
fn a() {
    struct X {}
    use X as Y;
}
